Fix problems with memory management for in parameters

Add a transfer argument to gjs_value_to_g_argument() to distinguish the
case where we need to copy arguments (transfer full) from where we only
need to create a temporary if that is required when converting from
JS to GObject (like for a string.)

Use that to:
 - Catch problematical cases up front: (transfer container) in parameters
   and (transfer full) in lists of structures.
 - Not ref objects when not transfering (fixes a leak)

When freeing an argument, distinguish freeing an in parameter from
freeing something; when we are freeing an in parameter, we only need
to free temporaries that we create.

This fixes:
 - Freeing boxed structs/unions that objects that we didn't copy
 - Bailing out when we have something non-copyable (a non-boxed
   structure, for example.)

Logic for what needs freeing is encapsulated in a new type_needs_release()

http://bugzilla.gnome.org/show_bug.cgi?id=582707